# Push_Swap

./: CMakeLists.txt  Makefile  README.md  author  my.sh  test.sh
checker/: checker.c  checker.h
checker.dSYM/Contents/Resources/DWARF/: checker
commands/: commands.c  commands.h  stack.c  stack.h
inc/: checker.h  get_next_line.h  push_swap.h  stack.h
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_find_elem.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstadd_elem.c  ft_lstdel.c  ft_lstdelone.c  ft_lstdelone_elem.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+27 more)
push_swap/: push_swap.c  push_swap.h  sort.c
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
src/: checker.c  clear.c  combine_commands.c  commands.c  get_next_line.c  helper.c  merge_operation.c  print_command.c  push_swap.c  quicksort.c  resource.c  small_sort_reverse_b.c  sort.c  sort_r.c  stack.c
